<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResumeDetailsPage"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter_the_details"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/nameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35sp"
        android:layout_marginTop="85dp"
        android:textColor="@color/black"
        android:text="@string/name"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameDetails" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginLeft="35sp"
        android:layout_marginTop="15dp"
        android:text="@string/phone_no"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:text="@string/linkedin_id"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginLeft="35sp"
        android:layout_marginTop="15dp"
        android:text="@string/address"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:text="@string/experience_years"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:text="@string/post_graduation_years"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginLeft="35sp"
        android:layout_marginTop="15dp"
        android:text="@string/school_name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:text="@string/undergradua_year"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35sp"
        android:layout_marginTop="15dp"
        android:text="Collage Name:-"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35sp"
        android:layout_marginTop="15dp"
        android:text="@string/coding_language"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="35sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textSize="8sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="Email"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColorHint="@color/black"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:ems="10"
        android:hint="Phone No."
        android:inputType="phone"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/linkedinInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:textColorHint="@color/black"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="Linkedin Id"
        android:inputType="textEmailAddress"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput" />

    <EditText
        android:id="@+id/addressInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:textColorHint="@color/black"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="Address"
        android:inputType="textPostalAddress"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/linkedinInput" />

    <EditText
        android:id="@+id/experienceInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="Years/Fresher"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/addressInput" />

    <EditText
        android:id="@+id/postGradInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:textColorHint="@color/black"
        android:ems="10"
        android:hint="@string/PostGra_year"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/experienceInput" />

    <EditText
        android:id="@+id/schoolInput"
        android:layout_width="wrap_content"
        android:textColorHint="@color/black"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:ems="10"
        android:hint="@string/sch_name"
        android:inputType="textPersonName"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/postGradInput" />

    <EditText
        android:id="@+id/gradutionInput"
        android:layout_width="wrap_content"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/Gra_year"
        android:inputType="textPersonName"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/schoolInput" />

    <EditText
        android:id="@+id/collageInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="Clg Name"
        android:inputType="textPersonName"
        android:textSize="8sp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/gradutionInput" />

    <EditText
        android:id="@+id/languagesInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:textColorHint="@color/black"
        android:hint="Language1,Language2,Language3"
        android:inputType="textPersonName"
        android:textSize="8sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/collageInput" />

    <EditText
        android:id="@+id/skill1Input"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:textColorHint="@color/black"
        android:hint="Skill 1"
        android:inputType="textPersonName"
        android:textSize="8sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/languagesInput" />

    <EditText
        android:id="@+id/skill2Input"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="Skill 2"
        android:inputType="textPersonName"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/skill1Input" />

    <EditText
        android:id="@+id/skill3Input"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="Skill 3"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/skill2Input" />

    <Button
        android:id="@+id/CreateResumeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Resume"
        android:textColor="@color/black"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35sp"
        android:layout_marginTop="85sp"
        android:textColor="@color/black"
        android:text="Projects:-"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <EditText
        android:id="@+id/project1Input"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColorHint="@color/black"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/project_1"
        android:textSize="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/skill3Input" />

    <EditText
        android:id="@+id/project2Input"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColorHint="@color/black"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/project_2"
        android:textColor="@color/black"
        android:textSize="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/project1Input" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="GetHub ID:-"
        android:textStyle="bold"
        android:layout_marginLeft="35sp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/githubInput"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        android:hint="GetHub ID"
        android:textColor="@color/black"
        android:textSize="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/project2Input" />
</androidx.constraintlayout.widget.ConstraintLayout>